2.2.5
- dropped CStdString usage
- added: implementation of GetBufferTimeStart and GetBufferTimeEnd (timeshifting).
- fixed: Coverity warnings introduced by predictive tuning feature.

2.2.4
- added: Predictive tuning (thanks @martinwilli)
- added: Include satpos in mux description (thanks @Glenn-1990)
- fixed: Crashes due to memory corruption (stack overflow)

2.2.3
- Updated to PVR API v2.1.0

2.2.2
- Debian packaging: fix library install path
- Miscellaneous backend fixes

2.2.1
- updated to PVR API v2.0.0
- fixed: a Coverity warning

2.2.0
- updated to PVR API v1.9.7
- added: support for series recordings (autorec, timerec)

2.1.13
- updated language files from Transifex

2.1.12
- fixed: channel icon compatibility issue with recent tvheadend servers.
- fixed: EPG events update (some data was not updated correctly)

2.1.11
- fixed: do not show HTSP version mismatch error if tvheadend server is down.

2.1.10
- fixed: lowered required HTSP version to 10 to allow using Tvheadend 3.4 again.

2.1.9
- fixed: packaging issues
- fixed: minor issues found by static analysis
- added: support for season/episode/part numbers for EPG tags
- added: check htsp version upon connect. Refuse to use servers with HTSP version not matching minimal HTSP version required by client.

2.1.8
- added: support for epg subtitles, aka episode names
- added: support for creating repeating timers, aka time schedules
- fixed: conditions for addon restart after settings changes
- internal: fixed build system regressions introduced with move to cmake
- internal: updated to use libplatform

2.1.7
- added: support for radio channel groups
- added: support for star and parental rating (read only)

2.1.6
- updated to PVR API v1.9.6
- added: support for channel group sort index
- fixed: crash while adding/updating timers on the client (double free of a htsp message)

2.1.5
- improved HTSP specification compliance

2.1.4
- updated to PVR API v1.9.5
- added: avahi discovery
- fixed: lock on exit