@@ -2,6 +2,7 @@
 - dropped CStdString usage
 - added: implementation of GetBufferTimeStart and GetBufferTimeEnd (timeshifting).
 - fixed: Coverity warnings introduced by predictive tuning feature.
+- fixed: Autorec: Start and stop time handling.
 
 2.2.4
 - added: Predictive tuning (thanks @martinwilli)
